--- a/trainProject/src/app/add-task/add-task.component.html
+++ b/trainProject/src/app/add-task/add-task.component.html
@@ -1,4 +1,4 @@
 <div>
-    <input [(ngModel)]="newTask" placeholder="new task">
-    <button (click)="addNewTask()">Add Task</button>
+  <input type="text" [(ngModel)]="task">
+  <button (click)="addTask();">Dodaj zadanie</button>
 </div>
