--- a/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
+++ b/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let task of taskDone">
-      <p> {{task}}</p>
-    </li>
-  </ul>
+  <li *ngFor="let item of tasks">
+    <p [innerText]="item"></p>
+  </li>
+</ul>
