--- a/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
+++ b/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
@@ -1,7 +1,33 @@
 <ul>
+  <li *ngFor="let task of tasks; let i=index">
+    <div>
+      <p [innerText]="task"></p>
+      <button (click)="deleteTask(i)">delete</button>
+      <button (click)="donetask(task, i)">Done Task</button>
+    </div>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <ul>
     <li *ngFor="let task of tasks; let i=index">
       <p>{{task}}</p>
       <button (click)="deleteTask($event)" data-id="{{i}}">DeleteTask</button>
       <button (click)="doneTaskHand(task, $event)" data-id="{{i}}">DoneTask</button>
     </li>
-  </ul>
+  </ul> -->
