--- a/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
+++ b/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
@@ -4,6 +4,7 @@
       <p [innerText]="task"></p>
       <button (click)="deleteTask(i)">delete</button>
       <button (click)="donetask(task, i)">Done Task</button>
+      <button (click)="filterTask(task)"> FiltrTask&delete</button>
     </div>
   </li>
 </ul>
