searcherbar func bus

--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -14,7 +14,7 @@
   <div>
     <p>test list narazie jest pusta</p>
     <ul>
-      <li *ngFor="let item of testList" [innerText]="item"></li>
+      <li *ngFor="let item of lookingList" [innerText]="item"></li>
     </ul>
   </div>
   <div>
