--- a/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
+++ b/trainProject/src/app/tasks-to-do/tasks-to-do.component.html
@@ -1,5 +1,6 @@
+<p [ngStyle]="{color:getColor()}">Zadanie do wykonania {{tasks.length}}</p>
 <ul>
-  <li *ngFor="let task of tasks; let i=index">
+  <li *ngFor="let task of tasks; let i=index; let odd = odd" [ngClass]="{'odd-li': odd === true, 'last-li': tasks.length ===1}">
     <div>
       <p [innerText]="task"></p>
       <button (click)="deleteTask(i)">delete</button>
@@ -8,27 +9,3 @@
     </div>
   </li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <ul>
-    <li *ngFor="let task of tasks; let i=index">
-      <p>{{task}}</p>
-      <button (click)="deleteTask($event)" data-id="{{i}}">DeleteTask</button>
-      <button (click)="doneTaskHand(task, $event)" data-id="{{i}}">DoneTask</button>
-    </li>
-  </ul> -->
