--- a/trainProject/src/app/action-bar/action-bar.component.html
+++ b/trainProject/src/app/action-bar/action-bar.component.html
@@ -15,3 +15,5 @@
   </div>
 </form>
 <ng-datepicker [options]="options" [(ngModel)] = "ng2date"></ng-datepicker>
+<h2>nowy data picker</h2>
+<ng-datepicker [options]="optionsTwo" [(ngModel)] = "newDatapicekr"></ng-datepicker>
