--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -5,7 +5,7 @@
   <app-add-task (taskOut)="hadnlerAddTask($event)"></app-add-task>
 </div>
 <div class='container'>
-  <app-action-bar [TaskList]="mainTasks" (emitLookingTask)="searchHandler($event)"></app-action-bar>
+  <app-action-bar [taskList]="mainTasks" (emitLookingList)="handlerLookignList($event)"></app-action-bar>
 </div>
 <div class='container'>
   <div>
