--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -2,14 +2,14 @@
 <app-tasklist2></app-tasklist2>
 <app-task-list3></app-task-list3> -->
 <div class='container'>
-  <app-add-task (taskOut)="hadnlerAddTask($event)"></app-add-task>
+  <app-add-task></app-add-task>
 </div>
 <div class='container'>
   <app-action-bar [taskList]="mainTasks" (emitLookingList)="handlerLookignList($event)"></app-action-bar>
 </div>
 <div class='container'>
   <div>
-    <app-tasks-to-do [tasks]="mainTasks" (deleteTaskIndex)="deleteTask($event)" (doneTaskObj)="doneTaskHandler($event)" (emitFilterTask)="filterHandler($event)"></app-tasks-to-do>
+    <app-tasks-to-do></app-tasks-to-do>
   </div>
   <div>
     <p>test list narazie jest pusta</p>
@@ -18,7 +18,7 @@
     </ul>
   </div>
   <div>
-    <app-tasks-to-done [tasks]="doneTasks" (clearList)="clearListHandler()"></app-tasks-to-done>
+    <app-tasks-to-done></app-tasks-to-done>
   </div>
 </div>
 <router-outlet></router-outlet>
