--- a/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
+++ b/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
@@ -1,6 +1,6 @@
 <button (click)="removeAll()">removeAll</button>
 <ul>
-  <li *ngFor="let item of tasks">
+  <li *ngFor="let item of tasksListDone">
     <p [innerText]="item"></p>
   </li>
 </ul>
