--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -5,7 +5,7 @@
   <app-add-task></app-add-task>
 </div>
 <div class='container'>
-  <app-action-bar [taskList]="mainTasks" (emitLookingList)="handlerLookignList($event)"></app-action-bar>
+  <app-action-bar (emitLookingList)="handlerLookignList($event)"></app-action-bar>
 </div>
 <div class='container'>
   <div>
@@ -14,7 +14,7 @@
   <div>
     <p>test list narazie jest pusta</p>
     <ul>
-      <li *ngFor="let item of lookingList" [innerText]="item"></li>
+      <li *ngFor="let item of lookingList" [innerText]="item.name"></li>
     </ul>
   </div>
   <div>
