--- a/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
+++ b/trainProject/src/app/tasks-to-done/tasks-to-done.component.html
@@ -1,6 +1,6 @@
 <button (click)="removeAll()">removeAll</button>
 <ul>
   <li appChecked appDate [date]="item.endTask" *ngFor="let item of tasksListDone">
-    <p [innerText]="item.name"></p>
+    <p [innerText]="item.name | transformTask: ' -zadanie skończone'"></p>
   </li>
 </ul>
