--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -21,4 +21,5 @@
     <app-tasks-to-done></app-tasks-to-done>
   </div>
 </div>
+<app-date-list-compo></app-date-list-compo>
 <router-outlet></router-outlet>
