--- a/trainProject/src/app/add-task/add-task.component.html
+++ b/trainProject/src/app/add-task/add-task.component.html
@@ -1,4 +1,5 @@
 <div>
   <input type="text" [(ngModel)]="task" (keydown.enter)="addTask()">
   <button (click)="addTask()">Dodaj zadanie</button>
+  <h3 #Test>TEST</h3>
 </div>
