--- a/trainProject/src/app/app.component.html
+++ b/trainProject/src/app/app.component.html
@@ -21,6 +21,9 @@
     <app-tasks-to-done></app-tasks-to-done>
   </div>
 </div>
+<div>
+  <button (click)="testGET()">Test</button>
+</div>
 <!-- <app-date-list-compo></app-date-list-compo> -->
 <app-rotation-div></app-rotation-div>
 <router-outlet></router-outlet>
